AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = aethyra
aethyra_SOURCES = bindings/guichan/graphics.cpp \
	      bindings/guichan/graphics.h \
	      bindings/guichan/guichanfwd.h \
	      bindings/guichan/gui.cpp \
	      bindings/guichan/gui.h \
	      bindings/guichan/inputmanager.cpp \
	      bindings/guichan/inputmanager.h \
	      bindings/guichan/keyboardconfig.cpp \
	      bindings/guichan/keyboardconfig.h \
	      bindings/guichan/layout.cpp \
	      bindings/guichan/layout.h \
	      bindings/guichan/layouthelper.cpp \
	      bindings/guichan/layouthelper.h \
	      bindings/guichan/palette.cpp \
	      bindings/guichan/palette.h \
	      bindings/guichan/protectedfocuslistener.cpp \
	      bindings/guichan/protectedfocuslistener.h \
	      bindings/guichan/skin.cpp \
	      bindings/guichan/skin.h \
	      bindings/guichan/text.cpp \
	      bindings/guichan/text.h \
	      bindings/guichan/textmanager.cpp \
	      bindings/guichan/textmanager.h \
	      bindings/guichan/textrenderer.h \
	      bindings/guichan/truetypefont.cpp \
	      bindings/guichan/truetypefont.h \
	      bindings/guichan/dialogs/confirmdialog.cpp \
	      bindings/guichan/dialogs/confirmdialog.h \
	      bindings/guichan/dialogs/helpdialog.cpp \
	      bindings/guichan/dialogs/helpdialog.h \
	      bindings/guichan/dialogs/okdialog.cpp \
	      bindings/guichan/dialogs/okdialog.h \
	      bindings/guichan/dialogs/textinputdialog.cpp \
	      bindings/guichan/dialogs/textinputdialog.h \
	      bindings/guichan/handlers/focushandler.cpp \
	      bindings/guichan/handlers/focushandler.h \
	      bindings/guichan/handlers/lettertextwraphandler.cpp \
	      bindings/guichan/handlers/lettertextwraphandler.h \
	      bindings/guichan/handlers/linkhandler.h \
	      bindings/guichan/handlers/shortcuthandler.cpp \
	      bindings/guichan/handlers/shortcuthandler.h \
	      bindings/guichan/handlers/textwraphandler.h \
	      bindings/guichan/handlers/wordtextwraphandler.cpp \
	      bindings/guichan/handlers/wordtextwraphandler.h \
	      bindings/guichan/models/keylistmodel.h \
	      bindings/guichan/models/linkmappedlistmodel.cpp \
	      bindings/guichan/models/linkmappedlistmodel.h \
	      bindings/guichan/models/mappedlistmodel.h \
	      bindings/guichan/models/modelistmodel.cpp \
	      bindings/guichan/models/modelistmodel.h \
	      bindings/guichan/models/statictablemodel.cpp \
	      bindings/guichan/models/statictablemodel.h \
	      bindings/guichan/models/tablemodel.cpp \
	      bindings/guichan/models/tablemodel.h \
	      bindings/guichan/opengl/openglgraphics.cpp \
	      bindings/guichan/opengl/openglgraphics.h \
	      bindings/guichan/sdl/sdlgraphics.cpp \
	      bindings/guichan/sdl/sdlgraphics.h \
	      bindings/guichan/sdl/sdlinput.cpp \
	      bindings/guichan/sdl/sdlinput.h \
	      bindings/guichan/widgets/browserbox.cpp \
	      bindings/guichan/widgets/browserbox.h \
	      bindings/guichan/widgets/button.cpp \
	      bindings/guichan/widgets/button.h \
	      bindings/guichan/widgets/chatinput.cpp \
	      bindings/guichan/widgets/chatinput.h \
	      bindings/guichan/widgets/checkbox.cpp \
	      bindings/guichan/widgets/checkbox.h \
	      bindings/guichan/widgets/container.cpp \
	      bindings/guichan/widgets/container.h \
	      bindings/guichan/widgets/dropdown.cpp \
	      bindings/guichan/widgets/dropdown.h \
	      bindings/guichan/widgets/icon.cpp \
	      bindings/guichan/widgets/icon.h \
	      bindings/guichan/widgets/imagebutton.cpp \
	      bindings/guichan/widgets/imagebutton.h \
	      bindings/guichan/widgets/inttextfield.h \
	      bindings/guichan/widgets/inttextfield.cpp \
	      bindings/guichan/widgets/label.cpp \
	      bindings/guichan/widgets/label.h \
	      bindings/guichan/widgets/listbox.cpp \
	      bindings/guichan/widgets/listbox.h \
	      bindings/guichan/widgets/mappedlistbox.cpp \
	      bindings/guichan/widgets/mappedlistbox.h \
	      bindings/guichan/widgets/passwordfield.cpp \
	      bindings/guichan/widgets/passwordfield.h \
	      bindings/guichan/widgets/popup.cpp \
	      bindings/guichan/widgets/popup.h \
	      bindings/guichan/widgets/progressbar.cpp \
	      bindings/guichan/widgets/progressbar.h \
	      bindings/guichan/widgets/proxywidget.cpp \
	      bindings/guichan/widgets/proxywidget.h \
	      bindings/guichan/widgets/radiobutton.cpp \
	      bindings/guichan/widgets/radiobutton.h \
	      bindings/guichan/widgets/resizegrip.cpp \
	      bindings/guichan/widgets/resizegrip.h \
	      bindings/guichan/widgets/scrollarea.cpp \
	      bindings/guichan/widgets/scrollarea.h \
	      bindings/guichan/widgets/shortcutcontainer.cpp \
	      bindings/guichan/widgets/shortcutcontainer.h \
	      bindings/guichan/widgets/shortcutwindow.cpp \
	      bindings/guichan/widgets/shortcutwindow.h \
	      bindings/guichan/widgets/slider.cpp \
	      bindings/guichan/widgets/slider.h \
	      bindings/guichan/widgets/speechbubble.cpp \
	      bindings/guichan/widgets/speechbubble.h \
	      bindings/guichan/widgets/tab.cpp \
	      bindings/guichan/widgets/tab.h \
	      bindings/guichan/widgets/tabbedarea.cpp \
	      bindings/guichan/widgets/tabbedarea.h \
	      bindings/guichan/widgets/table.cpp \
	      bindings/guichan/widgets/table.h \
	      bindings/guichan/widgets/textbox.cpp \
	      bindings/guichan/widgets/textbox.h \
	      bindings/guichan/widgets/textfield.cpp \
	      bindings/guichan/widgets/textfield.h \
	      bindings/guichan/widgets/textpreview.cpp \
	      bindings/guichan/widgets/textpreview.h \
	      bindings/guichan/widgets/tooltip.cpp \
	      bindings/guichan/widgets/tooltip.h \
	      bindings/guichan/widgets/window.cpp \
	      bindings/guichan/widgets/window.h \
	      bindings/guichan/widgets/windowcontainer.cpp \
	      bindings/guichan/widgets/windowcontainer.h \
	      bindings/sdl/joystick.cpp \
	      bindings/sdl/joystick.h \
	      bindings/sdl/sound.cpp \
	      bindings/sdl/sound.h \
	      core/configlistener.h \
	      core/configuration.cpp \
	      core/configuration.h \
	      core/log.cpp \
	      core/log.h \
	      core/recorder.cpp \
	      core/recorder.h \
	      core/resource.cpp \
	      core/resource.h \
	      core/resourcemanager.cpp \
	      core/resourcemanager.h \
	      core/image/animation.cpp \
	      core/image/animation.h \
	      core/image/dye.cpp \
	      core/image/dye.h \
	      core/image/image.cpp \
	      core/image/image.h \
	      core/image/imageloader.cpp \
	      core/image/imageloader.h \
	      core/image/imageset.h \
	      core/image/imageset.cpp \
	      core/image/imagewriter.cpp \
	      core/image/imagewriter.h \
	      core/image/simpleanimation.cpp \
	      core/image/simpleanimation.h \
	      core/image/wallpapermanager.cpp \
	      core/image/wallpapermanager.h \
	      core/image/particle/animationparticle.cpp \
	      core/image/particle/animationparticle.h \
	      core/image/particle/imageparticle.cpp \
	      core/image/particle/imageparticle.h \
	      core/image/particle/particle.cpp \
	      core/image/particle/particle.h \
	      core/image/particle/particlecontainer.cpp \
	      core/image/particle/particlecontainer.h \
	      core/image/particle/particleemitter.cpp \
	      core/image/particle/particleemitter.h \
	      core/image/particle/particleemitterprop.h \
	      core/image/particle/rotationalparticle.cpp \
	      core/image/particle/rotationalparticle.h \
	      core/image/particle/textparticle.cpp \
	      core/image/particle/textparticle.h \
	      core/image/sprite/action.cpp \
	      core/image/sprite/action.h \
	      core/image/sprite/animatedsprite.cpp \
	      core/image/sprite/animatedsprite.h \
	      core/image/sprite/being.cpp \
	      core/image/sprite/being.h \
	      core/image/sprite/flooritem.cpp \
	      core/image/sprite/flooritem.h \
	      core/image/sprite/localplayer.cpp \
	      core/image/sprite/localplayer.h \
	      core/image/sprite/monster.cpp \
	      core/image/sprite/monster.h \
	      core/image/sprite/npc.cpp \
	      core/image/sprite/npc.h \
	      core/image/sprite/player.cpp \
	      core/image/sprite/player.h \
	      core/image/sprite/sprite.h \
	      core/image/sprite/spritedef.cpp \
	      core/image/sprite/spritedef.h \
	      core/map/ambientoverlay.cpp \
	      core/map/ambientoverlay.h \
	      core/map/map.cpp \
	      core/map/map.h \
	      core/map/mapreader.cpp \
	      core/map/mapreader.h \
	      core/map/position.cpp \
	      core/map/position.h \
	      core/map/properties.h \
	      core/map/tileset.h \
	      core/sound/music.cpp \
	      core/sound/music.h \
	      core/sound/soundeffect.cpp \
	      core/sound/soundeffect.h \
	      core/utils/base64.cpp \
	      core/utils/base64.h \
	      core/utils/dtor.h \
	      core/utils/fastsqrt.h \
	      core/utils/gettext.h \
	      core/utils/lockedarray.h \
	      core/utils/mutex.h \
	      core/utils/stringutils.cpp \
	      core/utils/stringutils.h \
	      core/utils/vector.cpp \
	      core/utils/vector.h \
	      core/utils/xml.cpp \
	      core/utils/xml.h \
	      eathena/beingmanager.cpp \
	      eathena/beingmanager.h \
	      eathena/flooritemmanager.cpp \
	      eathena/flooritemmanager.h \
	      eathena/game.cpp \
	      eathena/game.h \
	      eathena/maploader.cpp \
	      eathena/maploader.h \
	      eathena/party.cpp \
	      eathena/party.h \
	      eathena/playerrelations.cpp \
	      eathena/playerrelations.h \
	      eathena/db/colordb.cpp \
	      eathena/db/colordb.h \
	      eathena/db/effectdb.cpp \
	      eathena/db/effectdb.h \
	      eathena/db/emotedb.cpp \
	      eathena/db/emotedb.h \
	      eathena/db/itemdb.cpp \
	      eathena/db/itemdb.h \
	      eathena/db/iteminfo.h \
	      eathena/db/iteminfo.cpp \
	      eathena/db/monsterdb.cpp \
	      eathena/db/monsterdb.h \
	      eathena/db/monsterinfo.cpp \
	      eathena/db/monsterinfo.h \
	      eathena/db/npcdb.cpp \
	      eathena/db/npcdb.h \
	      eathena/db/skilldb.cpp \
	      eathena/db/skilldb.h \
	      eathena/gui/tabs/setup_audio.cpp \
	      eathena/gui/tabs/setup_audio.h \
	      eathena/gui/tabs/setup_colors.cpp \
	      eathena/gui/tabs/setup_colors.h \
	      eathena/gui/tabs/setup_input.cpp \
	      eathena/gui/tabs/setup_input.h \
	      eathena/gui/tabs/setup_players.cpp \
	      eathena/gui/tabs/setup_players.h \
	      eathena/gui/tabs/setuptabcontainer.cpp \
	      eathena/gui/tabs/setuptabcontainer.h \
	      eathena/gui/tabs/setup_video.cpp \
	      eathena/gui/tabs/setup_video.h \
	      eathena/gui/buy.cpp \
	      eathena/gui/buy.h \
	      eathena/gui/buysell.cpp \
	      eathena/gui/buysell.h \
	      eathena/gui/charselect.cpp \
	      eathena/gui/charselect.h \
	      eathena/gui/charserver.cpp \
	      eathena/gui/charserver.h \
	      eathena/gui/chat.cpp \
	      eathena/gui/chat.h \
	      eathena/gui/debugwindow.cpp \
	      eathena/gui/debugwindow.h \
	      eathena/gui/desktop.cpp \
	      eathena/gui/desktop.h \
	      eathena/gui/emotewindow.cpp \
	      eathena/gui/emotewindow.h \
	      eathena/gui/equipmentwindow.cpp \
	      eathena/gui/equipmentwindow.h \
	      eathena/gui/inventorywindow.cpp \
	      eathena/gui/inventorywindow.h \
	      eathena/gui/itempopup.cpp \
	      eathena/gui/itempopup.h \
	      eathena/gui/itemamount.cpp \
	      eathena/gui/itemamount.h \
	      eathena/gui/login.cpp \
	      eathena/gui/login.h \
	      eathena/gui/menubar.cpp \
	      eathena/gui/menubar.h \
	      eathena/gui/minimap.cpp \
	      eathena/gui/minimap.h \
	      eathena/gui/ministatus.cpp \
	      eathena/gui/ministatus.h \
	      eathena/gui/npcintegerdialog.cpp \
	      eathena/gui/npcintegerdialog.h \
	      eathena/gui/npclistdialog.cpp \
	      eathena/gui/npclistdialog.h \
	      eathena/gui/npcstringdialog.cpp \
	      eathena/gui/npcstringdialog.h \
	      eathena/gui/npctext.cpp \
	      eathena/gui/npctext.h \
	      eathena/gui/popupmenu.cpp \
	      eathena/gui/popupmenu.h \
	      eathena/gui/register.cpp \
	      eathena/gui/register.h \
	      eathena/gui/sell.cpp \
	      eathena/gui/sell.h \
	      eathena/gui/setup.cpp \
	      eathena/gui/setup.h \
	      eathena/gui/skill.cpp \
	      eathena/gui/skill.h \
	      eathena/gui/slotselection.cpp \
	      eathena/gui/slotselection.h \
	      eathena/gui/status.cpp \
	      eathena/gui/status.h \
	      eathena/gui/storagewindow.cpp \
	      eathena/gui/storagewindow.h \
	      eathena/gui/trade.cpp \
	      eathena/gui/trade.h \
	      eathena/gui/updatewindow.h \
	      eathena/gui/updatewindow.cpp \
	      eathena/gui/viewport.cpp \
	      eathena/gui/viewport.h \
	      eathena/handlers/emoteshortcut.h \
	      eathena/handlers/itemlinkhandler.cpp \
	      eathena/handlers/itemlinkhandler.h \
	      eathena/handlers/itemshortcut.h \
	      eathena/models/ignorechoiceslistmodel.h \
	      eathena/models/playerrelationlistmodel.h \
	      eathena/models/playertablemodel.cpp \
	      eathena/models/playertablemodel.h \
	      eathena/models/shoplistmodel.cpp \
	      eathena/models/shoplistmodel.h \
	      eathena/models/skilltablemodel.cpp \
	      eathena/models/skilltablemodel.h \
	      eathena/net/beinghandler.h \
	      eathena/net/beinghandler.cpp \
	      eathena/net/buysellhandler.h \
	      eathena/net/buysellhandler.cpp \
	      eathena/net/charserverhandler.h \
	      eathena/net/charserverhandler.cpp \
	      eathena/net/chathandler.h \
	      eathena/net/chathandler.cpp \
	      eathena/net/equipmenthandler.h \
	      eathena/net/equipmenthandler.cpp \
	      eathena/net/inventoryhandler.h \
	      eathena/net/inventoryhandler.cpp \
	      eathena/net/itemhandler.h \
	      eathena/net/itemhandler.cpp \
	      eathena/net/logindata.h \
	      eathena/net/loginhandler.h \
	      eathena/net/loginhandler.cpp \
	      eathena/net/maploginhandler.cpp \
	      eathena/net/maploginhandler.h \
	      eathena/net/messagehandler.cpp \
	      eathena/net/messagehandler.h \
	      eathena/net/messagein.cpp \
	      eathena/net/messagein.h \
	      eathena/net/messageout.cpp \
	      eathena/net/messageout.h \
	      eathena/net/network.cpp \
	      eathena/net/network.h \
	      eathena/net/npchandler.cpp \
	      eathena/net/npchandler.h \
	      eathena/net/partyhandler.cpp \
	      eathena/net/partyhandler.h \
	      eathena/net/playerhandler.cpp \
	      eathena/net/playerhandler.h \
	      eathena/net/protocol.h \
	      eathena/net/serverinfo.h \
	      eathena/net/skillhandler.cpp \
	      eathena/net/skillhandler.h \
	      eathena/net/tradehandler.cpp \
	      eathena/net/tradehandler.h \
	      eathena/structs/equipment.cpp \
	      eathena/structs/equipment.h \
	      eathena/structs/inventory.cpp \
	      eathena/structs/inventory.h \
	      eathena/structs/item.cpp \
	      eathena/structs/item.h \
	      eathena/structs/shopitem.cpp \
	      eathena/structs/shopitem.h \
	      eathena/widgets/emotecontainer.cpp \
	      eathena/widgets/emotecontainer.h \
	      eathena/widgets/emoteshortcutcontainer.cpp \
	      eathena/widgets/emoteshortcutcontainer.h \
	      eathena/widgets/itemcontainer.cpp \
	      eathena/widgets/itemcontainer.h \
	      eathena/widgets/itemshortcutcontainer.cpp \
	      eathena/widgets/itemshortcutcontainer.h \
	      eathena/widgets/playerbox.cpp \
	      eathena/widgets/playerbox.h \
	      eathena/widgets/shoplistbox.cpp \
	      eathena/widgets/shoplistbox.h \
	      main.cpp \
	      main.h \
	      options.h

# set the include path found by configure
INCLUDES =					\
	$(all_includes)			          \
	-DPKG_DATADIR=\""$(pkgdatadir)/"\"  \
	-DLOCALEDIR=\""$(localedir)/"\"

# the library search path.
aethyra_LDFLAGS = $(all_libraries) $(LIBSDL_RPATH) `pkg-config --libs libxml-2.0`
aethyra_CXXFLAGS = -Wall $(LIBSDL_CFLAGS) `pkg-config --cflags libxml-2.0` $(CURL_CFLAGS)
aethyra_LDADD = $(LIBSDL_LIBS) -lguichan_sdl $(CURL_LIBS)
aethyra_TARGET = aethyra
